syntax = "proto3";

package proto;

message NewUser {
  string name = 2;
  string email = 3;
  string password = 4;
}

message User {
  uint32 userId = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message FilterName {
  string name = 1;
}

message Users {
  repeated User users = 1;
}

message userId {
  uint32 userId = 1;
}

message UpdateUserInfo {
  uint32 userId = 1;
  string name = 2;
  string email = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message Token {
  string token = 1;
}

service UserService {
  rpc Create (NewUser) returns (User) {}
  rpc Read (FilterName) returns (Users) {}
  rpc ReadById (userId) returns (User) {}
  rpc Update (UpdateUserInfo) returns (userId) {}
  rpc Delete (userId) returns (userId) {}
  rpc Login (LoginRequest) returns (Token) {}
}